# ch19

./: .gitignore  README.md  pyproject.toml
coppersmith/: __init__.py  bivar.py  bivariate.py  elimination.py  lll.py  poly.py  univariate.py
docs/: EXPERIMENTS.md
examples/: demo_bivariate.py  demo_factor_highbits.py  demo_hastad_broadcast.py  demo_integer_smallroot.py  demo_rsa_small_e.py  demo_univar.py
scripts/: lint.sh  run_demos.sh
tests/: test_core.py  test_perf.py
